# perceptualcolor

./: .codecheck-automatic-integration.sh  .codecheck-cmakelint.sh  .codecheck-doxygen.sh  .codecheck-qt5.sh  .codecheck-qt6.sh  .codecheck-static.sh  .gitignore  .gitlab-ci-staticcodecheck.sh  .gitlab-ci.sh  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.external  Doxyfile.internal  README.md  metainfo.yaml  run-add-missing-bom.sh  run-ci.sh  run-codecheck.sh  run-doxygen.sh
.circleci/: config.yml
autotests/: CMakeLists.txt  blackhole.h  testabsolutecolor.cpp  testabstractdiagram.cpp  testasyncimageprovider.cpp  testasyncimageproviderbase.cpp  testasyncimagerendercallback.cpp  testasyncimagerenderthread.cpp  testchromahuediagram.cpp  testchromahueimageparameters.cpp  testchromainfo.cpp  testchromalightnessdiagram.cpp  testchromalightnessimageparameters.cpp  testcielchd50values.cpp  testcielchvalues.cpp  testcolordialog.cpp  testcolordialog.qrc  testcolorengine.cpp  testcolorenginefactory.cpp  testcolorpatch.cpp  testcolorspaceinfo.cpp  testcolorwheel.cpp  testcolorwheelimage.cpp  testcolorwheelimageparameters.cpp  testcolorwheelimageprovider.cpp  testconstpropagatingrawpointer.cpp  testconstpropagatinguniquepointer.cpp  testcsscolor.cpp  testextendeddoublevalidator.cpp  testgenericcolor.cpp  testgradientimageparameters.cpp  testgradientslider.cpp  testhackyeyedropper.cpp  testhelper.cpp  testhelper.qrc  testhelperaccessibility.cpp  testhelperconstants.cpp  testhelperconversion.cpp  testhelperimage.cpp  testhelpermath.cpp  (+38 more)
autotests/testbed/: ascii-abcd.txt.license
autotests/testbed/Compact-ICC-Profiles/: README.md
autotests/testbed/Compact-ICC-Profiles/Compact-ICC-Profiles/profiles/: ProPhoto-v2-magic.icc.license
cmake/: ECMInstalledLibraryCheck.cmake
docs/: Doxyfile.external  Doxyfile.internal  Doxyfile.internal.license  Doxyfile.local
docs/pics/: ColorDialogCollapsed.png.license
examples/: CMakeLists.txt  example.cpp
icons/darktheme/: README.md  check.svg.license
icons/lighttheme/: README.md
lib/: CMakeLists.txt
lib/src/: abstractdiagram.cpp  abstractdiagram_p.h  asyncimageprovider.h  asyncimagerendercallback.cpp  asyncimagerenderthread.cpp  asyncimagerenderthread.h  chromahuediagram.cpp  chromahuediagram_p.h  chromahueimageparameters.cpp  chromalightnessdiagram.cpp  chromalightnessdiagram.h  chromalightnessdiagram_p.h  chromalightnessimageparameters.h  cielchvalues.h  colordialog.cpp  colordialog_p.h  colorpatch.cpp  colorpatch_p.h  colorwheel.cpp  colorwheel_p.h  colorwheelimage.h  constpropagatingrawpointer.h  extendeddoublevalidator.cpp  extendeddoublevalidator.h  extendeddoublevalidator_p.h  gradientimageparameters.cpp  gradientimageparameters.h  gradientslider.cpp  gradientslider_p.h  helper.cpp  (+34 more)
rpm/: libperceptualcolor-0.spec
scripts/: automatic-integration.sh  ci-automatic-integration.sh  ci-doxygen.sh  ci-format.sh  ci-ipo-lto.sh  ci-iwyu-qt5.sh  ci-iwyu-qt6.sh  ci-iwyu.sh  ci-qch.sh  ci-qt5.sh  ci-qt5build.sh  ci-qt6build.sh  ci-staticcodecheck.sh  ci-test.sh  ci-warnings-qt5.sh  ci-warnings-qt6.sh  ci-warnings.sh  ci.sh  export-environment.sh  format.sh  local-ci-build-warnings.sh  local-ci-fast.sh  local-ci-link-what-you-use.sh  run-add-missing-bom.sh  run-build-from-scratch.sh  run-ci.sh  run-codecheck.sh  run-doxygen.sh  run-export-environment.sh  static-codecheck.sh  update-screenshots.sh
src/: CMakeLists.txt  Config.cmake.in  Messages.sh  absolutecolor.cpp  absolutecolor.h  abstractdiagram.cpp  abstractdiagram.h  abstractdiagram_p.h  asyncimageprovider.h  asyncimageproviderbase.cpp  asyncimageproviderbase.h  asyncimagerendercallback.cpp  asyncimagerendercallback.h  asyncimagerenderthread.cpp  asyncimagerenderthread.h  chromahuediagram.cpp  chromahuediagram.h  chromahuediagram_p.h  chromahueimageparameters.cpp  chromahueimageparameters.h  chromainfo.cpp  chromainfo.h  chromalightnessdiagram.cpp  chromalightnessdiagram.h  chromalightnessdiagram_p.h  chromalightnessimageparameters.cpp  chromalightnessimageparameters.h  cielchd50values.h  cielchvalues.h  colordialog.cpp  colordialog.h  colordialog_p.h  colorengine.cpp  colorengine.h  colorengine_p.h  colorenginefactory.cpp  colorenginefactory.h  colorpatch.cpp  colorpatch.h  colorpatch_p.h  (+122 more)
src/include/: abstractdiagram.h  chromahuediagram.h  colordialog.h  colorpatch.h  colorwheel.h  constpropagatinguniquepointer.h  gradientslider.h  importexport.h  lchadouble.h  lchdouble.h  multispinbox.h  multispinboxsectionconfiguration.h  rgbcolorspacefactory.h  settranslation.h  version.in.hpp  wheelcolorpicker.h
src/include/perceptualcolor-0/: colorwheel.h  constpropagatinguniquepointer.h  lchadouble.h  lchdouble.h  multispinboxsectionconfiguration.h  rgbcolorspacefactory.h  version.in.hpp  wheelcolorpicker.h
src/translation/: perceptualcolorlib.de.qph  perceptualcolorlib.de.ts  perceptualcolorlib.es.ts  perceptualcolorlib.fr.ts  template.ts
tests/: CMakeLists.txt  main.cpp  perceptualcolorpicker.cpp  testapp.cpp
tools/: CMakeLists.txt  generatescreenshots.cpp  main.cpp
translationglossary/: perceptualcolorlib.de.qph.license
unittests/: CMakeLists.txt  testabstractdiagram.cpp  testasyncimageprovider.cpp  testasyncimagerenderthread.cpp  testchromahuediagram.cpp  testchromahueimageparameters.cpp  testchromalightnessdiagram.cpp  testchromalightnessimageparameters.cpp  testcielchvalues.cpp  testcolordialog.cpp  testcolordialog.qrc  testcolorpatch.cpp  testcolorwheel.cpp  testcolorwheelimage.cpp  testconstpropagatinguniquepointer.cpp  testgradientimageparameters.cpp  testgradientslider.cpp  testhelperconversion.cpp  testinitializetranslation.cpp  testinterlacingpass.cpp  testiohandlerfactory.qrc  testlchadouble.cpp  testlchdouble.cpp  testmulticolor.cpp  testmultispinbox.cpp  testmultispinboxsectionconfiguration.cpp  testpalettewidget.cpp  testpolarpointf.cpp  testrefreshiconengine.cpp  testrgbcolorspace.cpp  testrgbcolorspacefactory.cpp  testsettranslation.cpp  testversion.cpp  testwheelcolorpicker.cpp  testxxx.cpp
utils/: CMakeLists.txt  generatescreenshots.cpp
(+62 files in other folders)
